--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
 	"default_title": "Toggle Minimap"
     },
     "background": {
-	"scripts": ["background.js", "html2canvas.js", "jquery-1.8.3.min.js"]
+	"scripts": ["background.js"]
     },
     "permissions": [
 	"<all_urls>",
