--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,8 @@
 	"scripts": ["background.js"]
     },
     "permissions": [
-	"<all_urls>",
+	"<all_urls",
+	"*://*/*",
 	"tabs",
 	"pageCapture"
     ]
