--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,13 @@
     "background": {
 	"scripts": ["background.js"]
     },
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "css": ["minimap.css"],
+            "js": ["jquery-1.8.3.min.js", "html2canvas.js"]
+        }
+    ],
     "permissions": [
 	"*://*/*",
 	"tabs",
