--- a/manifest.json
+++ b/manifest.json
@@ -19,9 +19,9 @@
         {
             "matches": ["<all_urls>"],
             "css": ["minimap.css"],
-            "js": ["jquery-1.8.3.min.js", "html2canvas.js"]
+            "js": ["jquery-1.8.3.min.js", "html2canvas.js"] //, "game.js", "socket.io.js", "root.js"]
         }
-    ],
+    ], 
     "permissions": [
 	"*://*/*",
 	"tabs",
